--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
   <div class="container">
     <p>&copy; <script>document.write(new Date().getFullYear());</script> GymGear Pro. All rights reserved.</p>
     <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> | <a href="#">Contact Us</a></p>
+    <p>RANIDO-AMPO-MANGAYAO-RAÑEN-SANJUAN-COSAIN</p>
   </div>
 </footer>
 </body>
+
 </html>
